@@ -1,16 +1,4 @@
 DIST wagon-ssh-common-1.0.tar.bz2 9275 RMD160 e646bbc91a0306b8892de789215c53e207dd63b8 SHA1 f3eeded8e22f025e2b41820ad34dfa2cf3218f01 SHA256 c2d5bd9cc84475695df06d56c3c09f6fe782851ecb813e5bff9dc9fdfae153e6
-EBUILD wagon-ssh-common-1.0.ebuild 769 RMD160 24864e189cf12df91d01767ace4263de5845a827 SHA1 9c9c5eb220b8f339a52884cfe243dad2a746bf8b SHA256 61b7822d68ab8dbf95cd06c8f2bd034ed99bcd5bf54131fec6ade52bbc5d896a
-MD5 a0e04665d67340a8d9d3d6c0f9cc577a wagon-ssh-common-1.0.ebuild 769
-RMD160 24864e189cf12df91d01767ace4263de5845a827 wagon-ssh-common-1.0.ebuild 769
-SHA256 61b7822d68ab8dbf95cd06c8f2bd034ed99bcd5bf54131fec6ade52bbc5d896a wagon-ssh-common-1.0.ebuild 769
-MISC ChangeLog 216 RMD160 cd1d49fd437d3f7a33db510951aaf2df654043b4 SHA1 fca50d09a6218590baa5c8dd71bac9a5ca200bcc SHA256 bd9d9a213b40f8ae1b93ff68a6eb91b60ed538f161835390bc567b2afcd83a0c
-MD5 519bea1acafb6c7d9b622f4dc4057f12 ChangeLog 216
-RMD160 cd1d49fd437d3f7a33db510951aaf2df654043b4 ChangeLog 216
-SHA256 bd9d9a213b40f8ae1b93ff68a6eb91b60ed538f161835390bc567b2afcd83a0c ChangeLog 216
+EBUILD wagon-ssh-common-1.0.ebuild 713 RMD160 138f8e36dd8b580f98628d88b48beae237cfb17d SHA1 3fa9fd5b97ce050e017bcacdc9fb229d80530ed1 SHA256 aa345c6a25e501299095c9e929450ac7ede3fc72e127c98b038c38a20dc10a24
+MISC ChangeLog 322 RMD160 c4bf507c725b52976f5ae4a41758ce5c549dad8c SHA1 ef65f4d9ecab85b72d1f5e2a7cfff78769b32862 SHA256 4c00f5b1a9e03c43ba8e570370053f5ccee5606da5f9afecfdef6c8f5d227ca6
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
-MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
-RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
-SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 metadata.xml 157
-MD5 bdf5ba50c85c4cf3e4ceb57242d8394d files/digest-wagon-ssh-common-1.0 259
-RMD160 08ba96900a2ee119b9eaa372c3c57c22c21347e1 files/digest-wagon-ssh-common-1.0 259
-SHA256 0cc7048e9f0dc89a736cf02b33d20589e3a5b3e96fbe96e63e693c5f00017851 files/digest-wagon-ssh-common-1.0 259
